# MentorsMind-Contract

./: .gitignore  ARCHITECTURE.md  Cargo.toml  ESCROW_FIXES_SUMMARY.md  FIXES_VERIFICATION_CHECKLIST.md  ISSUES_253-256_FIXES_SUMMARY.txt  ISSUES_257-260_FIXES_SUMMARY.txt  ISSUE_207_ESCROW_DISPUTES_FIX.md  PR_DESCRIPTION.md  SECURITY.md  package-lock.json
contracts/lending_pool/: Cargo.toml
contracts/mnt-token/: Cargo.toml
contracts/staking/: Cargo.toml
contracts/subscription/: Cargo.toml
contracts/treasury/: Cargo.toml
contracts/verification/: Cargo.toml
deployed/: .gitignore  template.json
docs/: AUDIT-PREPARATION-SUMMARY.md  AUDIT-QUICKSTART.md  audit-test-environment-setup.md  mainnet-deployment-runbook.md  security-audit-checklist.md  threat-model.md  trust-assumptions.md
escrow/: Cargo.toml
escrow/src/: lib.rs
mentorminds-backend/: .env.example  .gitignore  CONTRACT_CHANGELOG.md  ESCROW-ID-FIX.md  EVENT-INDEXER-README.md  FIX_ASSET_ISSUERS.md  INSTALL-FIRST.md  QUICKSTART.md  SECURITY_FIX_QUOTE_REPLAY.md  install.bat  package.json
mentorminds-backend/docs/: CONFIG.md  CUSTODIAL_WALLET_DESIGN.md  ESCROW_SYNC.md  QUOTE_SERVICE.md
mentorminds-backend/migrations/: 033_create_escrows.sql  034_add_escrow_release_tracking.sql  035_add_partial_refund_support.sql  schema.sql
mentorminds-backend/src/: index.ts
mentorminds-backend/tests/: assetExchange.validateQuote.test.ts  escrow.service.test.ts  (+15 more)
mentorminds-stellar/: .env.example
scripts/: deploy.sh  deploy.ts
tests/: Cargo.toml  benchmarks.rs  lib.rs  state_machine_tests.rs  upgrade_test.rs
(+133 files in other folders)
