[package]
name = "mentorminds-integration-tests"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[lib]
name = "mentorminds_integration_tests"
path = "lib.rs"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
mentorminds-escrow = { path = "../escrow", features = ["testutils"] }
mentorminds-verification = { path = "../contracts/verification", features = ["testutils"] }

[[test]]
name = "upgrade_test"
path = "upgrade_test.rs"

[[test]]
name = "integration_test"
path = "integration_test.rs"
